; ModuleID = '/home/carl/AnghaBench/mpv/video/out/extr_drm_common.c_vt_switcher_sighandler.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/extr_drm_common.c_vt_switcher_sighandler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RELEASE_SIGNAL = common dso_local global i32 0, align 4
@EVT_RELEASE = common dso_local global i8 0, align 1
@EVT_ACQUIRE = common dso_local global i8 0, align 1
@vt_switcher_pipe = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @vt_switcher_sighandler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vt_switcher_sighandler(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8, align 1
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = load i32, i32* @RELEASE_SIGNAL, align 4
  %6 = icmp eq i32 %4, %5
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load i8, i8* @EVT_RELEASE, align 1
  %9 = zext i8 %8 to i32
  br label %13

10:                                               ; preds = %1
  %11 = load i8, i8* @EVT_ACQUIRE, align 1
  %12 = zext i8 %11 to i32
  br label %13

13:                                               ; preds = %10, %7
  %14 = phi i32 [ %9, %7 ], [ %12, %10 ]
  %15 = trunc i32 %14 to i8
  store i8 %15, i8* %3, align 1
  %16 = load i32*, i32** @vt_switcher_pipe, align 8
  %17 = getelementptr inbounds i32, i32* %16, i64 1
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @write(i32 %18, i8* %3, i32 1)
  ret void
}

declare dso_local i32 @write(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
